--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <script src="jquery.js" type="text/javascript"></script>
-    <script src="init.js" type="text/javascript"></script>
-</html>
+<script src="script.js"></script>
